Fix navbar font color in light mode
Remaining problem: Title (Zeitgeist Documentation) is too dark and Back
to main menu is too bright in light mode.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,10 +30,6 @@
   border-bottom: 1px solid #292830;
 }
 
-.navbar a {
-  color: white;
-}
-
 .footer {
   background: black;
   border-top: 1px solid #292830;
